--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Colegio Winterfell</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="http://freepngimg.com/download/tv_shows/30914-1-game-of-thrones-transparent.png">
 </head>
 <body>
   <app-root></app-root>
